@@ -17,13 +17,12 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 
 testConstraint reg 0
 if {[testConstraint win]} {
-    catch {
-	# Is the registry extension already static to this shell?
-	if [catch {load {} Registry; set ::reglib {}}] {
-	    # try the location given to use on the commandline to tcltest
+    if {![catch {load {} Registry}]
+	|| ![catch {package require registry}] 
+	|| ![catch {
 	    ::tcltest::loadTestedCommands
 	    load $::reglib Registry
-	}
+	}]} {
 	testConstraint reg 1
     }
 }
@@ -460,7 +459,7 @@ test registry-6.20 {GetValue: values with Unicode strings with embedded nulls} {
     registry delete HKEY_CURRENT_USER\\TclFoobar
     set result
 } "foo ba r baz"
-test registry-6.21 {GetValue: very long value names and values} {pcOnly} {
+test registry-6.21 {GetValue: very long value names and values} {pcOnly reg} {
     registry set HKEY_CURRENT_USER\\TclFoobar [string repeat k 199] [string repeat x 199] multi_sz
     set result [registry get HKEY_CURRENT_USER\\TclFoobar [string repeat k 199]]
     registry delete HKEY_CURRENT_USER\\TclFoobar
